fix(mod): enforce path and metadata order invariants